<resources>
    <string name="app_name">FamilyTracker</string>
    <string name="text_view_update_interval">Update Interval</string>
    <string name="text_view_fatest_update">Fatest update</string>
    <string name="text_view_displacement">Displacement</string>

    <string name="simpleText">Простий текст</string>
    <string name="title_activity_maps">GPS Tracker</string>
    <string name="title_activity_settings">Settings</string>
    <string name="buttonSettings_label">Settings</string>
    <!-- Strings related to Settings -->

    <!-- App Settings -->
    <string name="pref_header_app">App</string>

    <string name="pref_title_time_interval">Time Interval</string>
    <string name="pref_title_range_interval">Range Interval</string>
    <string name="pref_title_time_of_marker">Time of Marker</string>

    <integer name="pref_default_time_interval">50</integer>
    <integer name="pref_default_range_interval">50</integer>
    <integer name="pref_default_time_of_marker">50</integer>

    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>


    <!-- User Settings -->
    <string name="pref_header_user">User</string>

    <string name="pref_title_login">Login</string>
    <string name="pref_title_password">Password</string>


    <!-- Person Settings -->
    <string name="pref_header_person">Person</string>

    <string name="pref_title_first_name">First Name</string>
    <string name="pref_title_last_name">Last Name</string>
    <string name="pref_title_middle_name">Middle Name</string>

    <string name="pref_title_gender">Gender</string>
    <string-array name="pref_gender_titles">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="pref_gender_values">
        <item>1</item>
        <item>0</item>
    </string-array>


    <string name="pref_title_date_of_birth">Date of Birth</string>


    <string name="pref_title_email">Email</string>
    <string name="pref_title_phone">Phone</string>


    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="button_SettingsSave">Save</string>
    <string name="auth_failed">Authorization has failed</string>
    <string name="button_set_geofence">Set geofence</string>
    <string name="button_set_geofence_">Set geofence for exit</string>


    <string name="action_settings">Settings</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="search_title">Search</string>
    <string name="menu_item_map">Карта</string>
    <string name="menu_item_settings">Налаштування</string>
    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>
    <string name="update_interval">Update Interval</string>
    <string name="fatest_interval">Fatest Interval</string>
    <string name="displacement">Displacement</string>

</resources>
