<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.kamanda.timon.gpstracker.SettingsActivity$AppPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_app" />

    <header
        android:fragment="com.kamanda.timon.gpstracker.SettingsActivity$UserPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_user" />

    <header
        android:fragment="com.kamanda.timon.gpstracker.SettingsActivity$PersonPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_person" />

</preference-headers>
