<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:id="@+id/container"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextUpdateInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/update_interval"
        android:inputType="number"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColorHint="@android:color/black"/>

    <EditText
        android:id="@+id/editTextFatestInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextUpdateInterval"
        android:layout_alignStart="@+id/editTextUpdateInterval"
        android:layout_below="@+id/editTextUpdateInterval"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/fatest_interval"
        android:inputType="number"
        android:textColorHint="@android:color/black"/>

    <EditText
        android:id="@+id/editTextDisplacement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextFatestInterval"
        android:layout_alignStart="@+id/editTextFatestInterval"
        android:layout_below="@+id/editTextFatestInterval"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/displacement"
        android:inputType="number"
        android:textColorHint="@android:color/black"/>

    <Button
        android:id="@+id/buttonSettingsSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextDisplacement"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:onClick="ApplyChanges"
        android:text="@string/button_SettingsSave" />
</RelativeLayout>